--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
-server.port=${PORT:8080}
-logging.level.org.atmosphere = warn
-spring.mustache.check-template-location = false
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
-# To improve the performance during development.
-# For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
-vaadin.allowed-packages = com.vaadin,org.vaadin,com.corto.application
-spring.jpa.defer-datasource-initialization = true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+
+# Puerto de servidor
+server.port=8090
